frontend/tests/cases/negative/patternCoeffect.gr.output
Type checking failed: 
Type error: frontend/tests/cases/negative/patternCoeffect.gr:7:3:
Expected 2 uses, but instead there are 3 actual uses.